[package]
name = "rust_py"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_math"
# python module name,should be same in lib.rs
#[pymodule]
#fn rust_math(py: Python, m: &PyModule) -> PyResult<()> {
#    m.add_function(wrap_pyfunction!(add, m)?)?;
#    Ok(())
#}

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]  # 扩展模块，像其他的还有auto-initialize